welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot: error: not found: value growFlowers
	    growFlowers();
            ^FlowerPot:6: error: not found: value c
	marqueSol (c)
                   ^FlowerPot:11: error: not found: value c
	marqueSol(c)
                  ^FlowerPot:14: error: not found: value c
	marqueSol(c)
                  ^FlowerPot:18: error: not found: value c
	marqueSol(c)
                  ^